--- a/MayaNo2/pom.xml
+++ b/MayaNo2/pom.xml
@@ -4,6 +4,16 @@
     <groupId>com.mycompany</groupId>
     <artifactId>MayaNo2</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+                <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.27</version>
+        </dependency>
+
+    </dependencies>
+ 
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
