--- a/MayaNo2/pom.xml
+++ b/MayaNo2/pom.xml
@@ -4,13 +4,14 @@
     <groupId>com.mycompany</groupId>
     <artifactId>MayaNo2</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-    <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.16</version>
-    </dependency>
-
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+        </dependency>
+    </dependencies>
 
     <packaging>jar</packaging>
     <properties>
