--- a/MayaNo2/.vscode/settings.json
+++ b/MayaNo2/.vscode/settings.json
@@ -1,3 +1,18 @@
 {
-    "java.configuration.updateBuildConfiguration": "automatic"
+    "java.configuration.updateBuildConfiguration": "automatic",
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "Mayatest",
+            "database": "mayav2",
+            "username": "nal",
+            "password": "Hassanaharriz8122*_"
+        }
+    ]
 }
