--- a/MayaNo2/.vscode/settings.json
+++ b/MayaNo2/.vscode/settings.json
@@ -6,19 +6,6 @@
                 "authProtocol": "default"
             },
             "previewLimit": 50,
-            "server": "localhost",
-            "port": 3306,
-            "driver": "MySQL",
-            "name": "maya",
-            "database": "mayav2",
-            "username": "nal",
-            "password": "Hasssanalharriz8122*"
-        },
-        {
-            "mysqlOptions": {
-                "authProtocol": "default"
-            },
-            "previewLimit": 50,
             "server": "127.0.0.1",
             "port": 3306,
             "driver": "MySQL",
@@ -26,6 +13,19 @@
             "database": "mayav2",
             "username": "root",
             "password": "Hassanal8122*_"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "maya",
+            "database": "mayav2",
+            "username": "nal",
+            "password": "Hassanalharriz8122*"
         }
     ]
 }
